# linktree_htm

./: .eslintrc.cjs  .gitignore  README.md  build_analyse.html  components.d.ts  index.html  package.json  pnpm-lock.yaml  postcss.config.js  prettier.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.vitest.json  vite.config.ts
docs/: aa.md  index.md
docs/.vuepress/: config.js
splashscreen/: index.html  splashscreen.ts
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_options.rs  app_windows.rs  main.rs
src-tauri/src/app_options/: events.rs  global_shortcuts.rs  ipc_handler.rs  tray.rs
src-tauri/src/app_windows/: translate.rs  win_manager.rs
src/__tests__/: learn.test.ts
src/components/: AppCtrl.vue  AppCurl.vue
src/components/__tests__/: HelloWorld.test.ts
src/components/global/: index.ts
src/layouts/: AppLayouts.vue
src/layouts/home/: DeviceLayout.vue  HomeLayout.vue
src/pages/appHome/: AppHome.vue
src/pages/init/: InitPage.vue  dbPage.vue  index.vue  redisPage.vue  result.vue  setupPage.vue
src/pages/win/: taskManager.vue  translationView.vue  type.ts
src/router/: guard.ts  index.ts
src/router/handlerInterceptor/: index.ts
src/service/: file.ts  init.ts  request.ts  user.ts  websocket.ts
src/service/request/: entity.ts  request.ts
src/service/type/: index.d.ts  init.d.ts  (+1 more)
src/stores/: StorageStore.ts  index.ts  initStore.ts  storageStore.ts
src/style/: base.scss  colors.js  index.scss
src/tauri/: IPC.ts  index.ts
src/views/: 404.vue  AppHome.vue
(+24 files in other folders)
